2013-04-04 Simon Large
    * doc/dfu-programmer.1 doc/dfu-programmer.html
      Document the fact that dfu-programmer requires separate erase
      and program commands, unlike BatchISP.

2013-02-22 Simon Large
    * configure.ac
      When building Configure on a system that does not have pkg-config
      installed, supply the default include and lib paths for libusb-1.0.

2013-02-21 Simon Large
    * doc/dfu-programmer.1 doc/dfu-programmer.html
      Apply patch sent by David Nelson and copy into the html help too.

2013-02-21 Simon Large
    * src/commands.c src/arguments.c src/arguments.h
      src/dfu.c src/dfu.h src/main.c AUTHORS
      Apply patch sent by David Nelson to add support for using a specific
      usb bus and device, to add device serialisation, add a new AVR32 device
      and clean up some output.

2013-01-24 Simon Large
    * doc/dfu-programmer.1 doc/dfu-programmer.html
      Update the documentation.

2013-01-23 Simon Large
    * src/commands.c src/arguments.c
      Do not attempt eeprom operations on devices without.
      Report unrecognised target device name better.

2013-01-23 Simon Large
    * src/commands.c src/atmel.c src/atmel.h
      Check the security fuse state for AVR32 to give a better error message.

2013-01-22 Simon Large
    * doc/dfu-programmer.html
      Add an html version of the man page.

2013-01-20 Simon Large
    * src/commands.c src/arguments.c src/arguments.h
      src/atmel.c src/atmel.h
      Add a new command to set the security fuse in AVR32 devices.

2013-01-19 Simon Large
    * src/commands.c src/dfu.c
      Improve some error messages.

2013-01-19 Simon Large
    * src/arguments.c
      Better presentation of help text.
      Use some simple switches for basic help:
      --help, --targets, --version.

2013-01-18 Simon Large, Kees Bakker
    * src/atmel.c
      Correct eeprom selection in dump-eeprom. The protcol
      differs between AVR and AVR32 families.

2013-01-18 Simon Large