@@ -1,4 +1,9 @@
 2013-04-04 Simon Large
+    * src/commands.c
+      Clarify some error messages and suggest that a validation
+      fail may be due to not erasing first.
+
+2013-04-04 Simon Large
     * doc/dfu-programmer.1 doc/dfu-programmer.html
       Document the fact that dfu-programmer requires separate erase
       and program commands, unlike BatchISP.
